--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-entity camera="active: true" look-controls wasd-controls position="0 1.6 0" data-aframe-default-camera></a-entity>
 
+    <a-scene do-something >
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
+      <a-assets >
+        <a-asset-item id="cityModel" src="scene.gltf"></a-asset-item>
+      </a-assets>
+    <a-entity position="1 5 -10" gltf-model="#cityModel" modify-materials></a-entity>
+    </a-scene>
+  </body>
+</html>
