--- a/zoom/zoom.html
+++ b/zoom/zoom.html
@@ -8,8 +8,8 @@
 <style>
 .content
 {
-    width: 400px;  
-    height: 303px;
+    width: 300px;  
+    height: 203px;
    
 }
 img
@@ -29,7 +29,7 @@ body
     background-repeat: no-repeat;
     position: absolute;
     top:20px;
-    left: 450px;
+    left: 330px;
     box-shadow: 1px 1px 5px black;
 }
 
@@ -48,7 +48,7 @@ let option={
     size:50,
     zoomsize:200,
 }
-new Rect(option);
+new Rect(content,option);
 
 
 </script>
