--- a/filpgame/index.html
+++ b/filpgame/index.html
@@ -24,6 +24,7 @@
           position: relative;
           transform: scale(1);
           transform-style: preserve-3d;
+          -webkit-transform-style: preserve-3d;
           transition:transform .5s;
           cursor: pointer;
       }
