--- a/filpgame/index.html
+++ b/filpgame/index.html
@@ -41,9 +41,11 @@
       }
       .front_card{
         transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
       }
       .flip{
           transform: rotateY(180deg);
+          -webkit-transform: rotateY(180deg);
          
       }
       .memory-game
