--- a/filpgame/index.html
+++ b/filpgame/index.html
@@ -38,6 +38,7 @@
         padding: 10px;
         border-radius: 5px;
         backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
       }
       .front_card{
         transform: rotateY(180deg);
@@ -169,7 +170,6 @@
     </style>
   </head>
   <body>
-    11
     <section class="memory-game">
       
     </section>
