--- a/filpgame/index.html
+++ b/filpgame/index.html
@@ -164,7 +164,9 @@
         width: 100vw;
         position: fixed;
         height: 100vh;
-        z-index: 100;
+        z-index: 999999;
+        transform:translate3d(0,0,0);
+        -webkit-transform:translate3d(0,0,0);
         background-color: rgba(0, 0, 0, .6);
       }
     </style>
